gfx/tests/gtest/TestConfigManager.cpp
@@ -169,9 +169,6 @@ class MockGfxInfo final : public nsIGfxInfo {
   NS_IMETHOD GetWindowProtocol(nsAString& aWindowProtocol) override {
     return NS_ERROR_NOT_IMPLEMENTED;
   }
-  NS_IMETHOD GetDesktopEnvironment(nsAString& aDesktopEnvironment) override {
-    return NS_ERROR_NOT_IMPLEMENTED;
-  }
   NS_IMETHOD GetTestType(nsAString& aTestType) override {
     return NS_ERROR_NOT_IMPLEMENTED;
   }
